# ead_dados

./: .env_example  pyproject.toml
ead_dados/: main.py
ead_dados/api/alunos/: get_list_alunos.py
ead_dados/api/certificados/: get_list_certificados.py
ead_dados/api/grupo_aluno/: get_list_grupo_aluno.py
ead_dados/api/grupos/: get_list_grupos.py
ead_dados/api/matriculas/: get_list_matriculas.py
ead_dados/api/progresso_aluno/: get_list_progresso_aluno.py
ead_dados/db/: db_tabelas_base.py
ead_dados/db/alunos/: delete_create_table_aluno.py
ead_dados/db/certificados/: delete_create_table_certificados.py
ead_dados/db/grupo_aluno/: delete_create_grupo_aluno.py
ead_dados/db/grupos/: delete_create_table_grupos.py
ead_dados/db/matriculas/: delete_create_table_matriculas.py
ead_dados/db/progresso_aluno/: delete_create_progresso_aluno.py
ead_dados/log/: log.py
